--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,11 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
+# Debug folder
+[Dd]ebug/
+dist/
+build/
+
 # =========================
 # Operating System Files
 # =========================
@@ -45,3 +50,5 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+build/*
+dist/*
